--- a/index.html
+++ b/index.html
@@ -4,30 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>VoyagENG Database Interface</title>
+    <title>Login</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Firebase UI -->
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     
     <main class="form-signin">
-    <form>
-        <h1 class="h3 mb-3 fw-normal">Please Login</h1>
-
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
-        </div>
-
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
-    </form>
+        <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
     </main>
 
 
@@ -38,6 +28,8 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
+    <!-- Firebase UI -->
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <!-- Custom JS -->
     <script type="text/javascript" src="script.js"></script>
 </body>
